2002-06-01  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (toc_page_start): removed all of the CSS
	  used to get it to not render huge fonts, now handled by
	  Gtkhtml2.

	* stylesheets/yelp-customization.xsl: 
	- don't hard code font size to 10pt. Use the font set by Gtkhtml2
	  (which is taken from the theme)

	* src/yelp-db2html.c (main): don't load the DTD from the net.

	* src/yelp-reader.c (reader_file_start): Fixed #83668

2002-06-01  James Henstridge  <james@daa.com.au>

	* src/yelp-db2html.c (main): perform XInclude processing on
	  Docbook/XML documents we load.

2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added "gl" (Galician) to ALL_LINGUAS

2002-05-29  Radek Doulik  <rodo@ximian.com>

	* src/yelp-html-gtkhtml1.c: 
	- removed #include "yelp-db2html.h"
	(html_url_requested_cb): close gtkhtml stream

2002-05-31  Mikael Hallendal  <micke@codefactory.se>

	* configure.in (yelp): define yelplocaledir, Fixes #83639

	* src/Makefile.am (INCLUDES): use yelplocaledir

2002-05-31  Ross Burton  <ross@burtonini.com>

	* src/yelp-window.c (window_about_cb): Tell the about dialog who
	  its parent is, so that it appears at the right location.

2002-05-31  Yogeesh MB <yogeeshappa.mathighatta@wipro.com> 

	* src/yelp-main.c: fixes save session bug, #82605 

2002-05-31  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c (reader_get_chunk):
	- return the full document if finding the chunk comments
	  fail. This is better than just returning NULL. Also silence the
	  warnings for now.

	* Release 0.9.1

	* configure.in: bumped version to 0.9.1

	* NEWS: updated for 0.9.1

	* stylesheets/docbook/*: 
	- Added the 1.48 stylesheets until the stylesheet issues have been 
	  sorted out. Norm has said that in the 1.50+ the changes between
	  the different versions will not cause breakage and we can then
	  use current instead of a certain version of these. Lots of
	  distributions don't ship 1.48 and this will cause lots of